--- a/bower.json
+++ b/bower.json
@@ -36,6 +36,8 @@
     "jem.js": "sedran/jem.js#~1.1.0",
     "jquery": "^2.0.0",
     "jquery-ui": "jqueryui#^1.11.0",
+    "paper-header-panel": "PolymerElements/paper-header-panel#~1.0.5",
+    "paper-styles": "PolymerElements/paper-styles#~1.0.11",
     "polymer": "Polymer/polymer#^1.0.0",
     "underscore": "^1.8.0"
   }
