--- a/bower.json
+++ b/bower.json
@@ -38,7 +38,9 @@
     "jquery-ui": "jqueryui#^1.11.0",
     "paper-fab": "PolymerElements/paper-fab#~1.0.3",
     "paper-header-panel": "PolymerElements/paper-header-panel#~1.0.5",
+    "paper-icon-button": "PolymerElements/paper-icon-button#~1.0.3",
     "paper-styles": "PolymerElements/paper-styles#~1.0.11",
+    "paper-toolbar": "PolymerElements/paper-toolbar#~1.0.4",
     "polymer": "Polymer/polymer#^1.0.0",
     "underscore": "^1.8.0"
   }
