--- a/bower.json
+++ b/bower.json
@@ -36,6 +36,8 @@
     "jem.js": "sedran/jem.js#~1.1.0",
     "jquery": "^2.0.0",
     "jquery-ui": "jqueryui#^1.11.0",
+    "paper-button": "PolymerElements/paper-button#~1.0.3",
+    "paper-card": "PolymerElements/paper-card#~1.0.3",
     "paper-fab": "PolymerElements/paper-fab#~1.0.3",
     "paper-header-panel": "PolymerElements/paper-header-panel#~1.0.5",
     "paper-icon-button": "PolymerElements/paper-icon-button#~1.0.3",
