--- a/bower.json
+++ b/bower.json
@@ -34,6 +34,7 @@
     "chosen": "^1.2.0",
     "highlight": "^7.0.0",
     "iron-autogrow-textarea": "PolymerElements/iron-autogrow-textarea#~1.0.4",
+    "iron-pages": "PolymerElements/iron-pages#~1.0.3",
     "jem.js": "sedran/jem.js#~1.1.0",
     "jquery": "^2.0.0",
     "jquery-ui": "jqueryui#^1.11.0",
@@ -43,6 +44,7 @@
     "paper-header-panel": "PolymerElements/paper-header-panel#~1.0.5",
     "paper-icon-button": "PolymerElements/paper-icon-button#~1.0.3",
     "paper-styles": "PolymerElements/paper-styles#~1.0.11",
+    "paper-tabs": "PolymerElements/paper-tabs#~1.0.2",
     "paper-toolbar": "PolymerElements/paper-toolbar#~1.0.4",
     "polymer": "Polymer/polymer#^1.0.0",
     "underscore": "^1.8.0"
