--- a/bower.json
+++ b/bower.json
@@ -1,56 +1,56 @@
 {
-  "name": "geo-ws",
-  "version": "1.0.0",
-  "homepage": "https://github.com/andreyh13/geo-ws",
-  "authors": [
-    "Xomena <andreyh.13@gmail.com>"
-  ],
-  "description": "Google Maps Web Services requests builder",
-  "keywords": [
-    "google",
-    "maps",
-    "api",
-    "https",
-    "web",
-    "service",
-    "geocoding",
-    "directions",
-    "places",
-    "roads"
-  ],
-  "license": "Apache",
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ],
-  "dependencies": {
-    "backbone": "^1.2.0",
-    "backbone.localStorage": "^1.1.16",
-    "backbone.validation": "backbone-validation#^0.11.0",
-    "blockUI": "malsup/blockui",
-    "chosen": "^1.2.0",
-    "google-apis": "GoogleWebComponents/google-apis#~1.0.3",
-    "google-map": "GoogleWebComponents/google-map#~1.0.6",
-    "highlight": "^7.0.0",
-    "iron-autogrow-textarea": "PolymerElements/iron-autogrow-textarea#~1.0.4",
-    "iron-pages": "PolymerElements/iron-pages#~1.0.3",
-    "jem.js": "sedran/jem.js#~1.1.0",
-    "jquery": "^2.0.0",
-    "jquery-ui": "jqueryui#^1.11.0",
-    "paper-button": "PolymerElements/paper-button#~1.0.3",
-    "paper-card": "PolymerElements/paper-card#~1.0.3",
-    "paper-dialog": "PolymerElements/paper-dialog#~1.0.1",
-    "paper-dialog-scrollable": "PolymerElements/paper-dialog-scrollable#~1.0.1",
-    "paper-fab": "PolymerElements/paper-fab#~1.0.3",
-    "paper-header-panel": "PolymerElements/paper-header-panel#~1.0.5",
-    "paper-icon-button": "PolymerElements/paper-icon-button#~1.0.3",
-    "paper-styles": "PolymerElements/paper-styles#~1.0.11",
-    "paper-tabs": "PolymerElements/paper-tabs#~1.0.2",
-    "paper-toolbar": "PolymerElements/paper-toolbar#~1.0.4",
-    "polymer": "Polymer/polymer#^1.0.0",
-    "underscore": "^1.8.0"
-  }
+    "name": "geo-ws",
+    "version": "1.0.0",
+    "homepage": "https://github.com/andreyh13/geo-ws",
+    "authors": [
+        "Xomena <andreyh.13@gmail.com>"
+    ],
+    "description": "Google Maps Web Services requests builder",
+    "keywords": [
+        "google",
+        "maps",
+        "api",
+        "https",
+        "web",
+        "service",
+        "geocoding",
+        "directions",
+        "places",
+        "roads"
+    ],
+    "license": "Apache",
+    "ignore": [
+        "**/.*",
+        "node_modules",
+        "bower_components",
+        "test",
+        "tests"
+    ],
+    "dependencies": {
+        "backbone": "~1.2.3",
+        "backbone.localStorage": "^1.1.16",
+        "backbone.validation": "backbone-validation#^0.11.0",
+        "blockUI": "malsup/blockui",
+        "chosen": "^1.2.0",
+        "google-apis": "GoogleWebComponents/google-apis#~1.0.3",
+        "google-map": "GoogleWebComponents/google-map#~1.0.6",
+        "highlight": "^7.0.0",
+        "iron-autogrow-textarea": "PolymerElements/iron-autogrow-textarea#~1.0.4",
+        "iron-pages": "PolymerElements/iron-pages#~1.0.3",
+        "jem.js": "sedran/jem.js#~1.1.0",
+        "jquery": "^2.0.0",
+        "jquery-ui": "jqueryui#^1.11.0",
+        "paper-button": "PolymerElements/paper-button#~1.0.3",
+        "paper-card": "PolymerElements/paper-card#~1.0.3",
+        "paper-dialog": "PolymerElements/paper-dialog#~1.0.1",
+        "paper-dialog-scrollable": "PolymerElements/paper-dialog-scrollable#~1.0.1",
+        "paper-fab": "PolymerElements/paper-fab#~1.0.3",
+        "paper-header-panel": "PolymerElements/paper-header-panel#~1.0.5",
+        "paper-icon-button": "PolymerElements/paper-icon-button#~1.0.3",
+        "paper-styles": "PolymerElements/paper-styles#~1.0.11",
+        "paper-tabs": "PolymerElements/paper-tabs#~1.0.2",
+        "paper-toolbar": "PolymerElements/paper-toolbar#~1.0.4",
+        "polymer": "Polymer/polymer#^1.0.0",
+        "underscore": "^1.8.0"
+    }
 }
