--- a/bower.json
+++ b/bower.json
@@ -1,57 +1,61 @@
 {
-    "name": "geo-ws",
-    "version": "1.0.0",
-    "homepage": "https://github.com/andreyh13/geo-ws",
-    "authors": [
-        "Xomena <andreyh.13@gmail.com>"
-    ],
-    "description": "Google Maps Web Services requests builder",
-    "keywords": [
-        "google",
-        "maps",
-        "api",
-        "https",
-        "web",
-        "service",
-        "geocoding",
-        "directions",
-        "places",
-        "roads"
-    ],
-    "license": "Apache",
-    "ignore": [
-        "**/.*",
-        "node_modules",
-        "bower_components",
-        "test",
-        "tests"
-    ],
-    "dependencies": {
-        "backbone": "~1.2.3",
-        "backbone.localStorage": "^1.1.16",
-        "backbone.validation": "backbone-validation#^0.11.0",
-        "blockUI": "malsup/blockui",
-        "chosen": "^1.2.0",
-        "google-apis": "GoogleWebComponents/google-apis#~1.1.2",
-        "google-map": "GoogleWebComponents/google-map#~1.1.4",
-        "highlight": "~8.8.0",
-        "iron-autogrow-textarea": "PolymerElements/iron-autogrow-textarea#~1.0.7",
-        "iron-pages": "PolymerElements/iron-pages#~1.0.3",
-        "jem.js": "sedran/jem.js#~1.1.0",
-        "jquery": "^2.0.0",
-        "jquery-ui": "jqueryui#^1.11.0",
-        "paper-button": "PolymerElements/paper-button#~1.0.8",
-        "paper-card": "PolymerElements/paper-card#~1.0.6",
-        "paper-dialog": "PolymerElements/paper-dialog#~1.0.2",
-        "paper-dialog-scrollable": "PolymerElements/paper-dialog-scrollable#~1.0.1",
-        "paper-fab": "PolymerElements/paper-fab#~1.0.5",
-        "paper-header-panel": "PolymerElements/paper-header-panel#~1.0.5",
-        "paper-icon-button": "PolymerElements/paper-icon-button#~1.0.5",
-        "paper-progress": "PolymerElements/paper-progress#~1.0.7",
-        "paper-styles": "PolymerElements/paper-styles#~1.0.11",
-        "paper-tabs": "PolymerElements/paper-tabs#~1.0.4",
-        "paper-toolbar": "PolymerElements/paper-toolbar#~1.0.4",
-        "polymer": "Polymer/polymer#^1.0.0",
-        "underscore": "^1.8.0"
-    }
+  "name": "geo-ws",
+  "version": "1.0.0",
+  "homepage": "https://github.com/andreyh13/geo-ws",
+  "authors": [
+    "Xomena <andreyh.13@gmail.com>"
+  ],
+  "description": "Google Maps Web Services requests builder",
+  "keywords": [
+    "google",
+    "maps",
+    "api",
+    "https",
+    "web",
+    "service",
+    "geocoding",
+    "directions",
+    "places",
+    "roads"
+  ],
+  "license": "Apache",
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ],
+  "dependencies": {
+    "backbone": "~1.2.3",
+    "backbone.localStorage": "^1.1.16",
+    "backbone.validation": "backbone-validation#^0.11.0",
+    "blockUI": "malsup/blockui",
+    "chosen": "^1.2.0",
+    "google-apis": "GoogleWebComponents/google-apis#~1.1.2",
+    "google-map": "GoogleWebComponents/google-map#~1.1.4",
+    "highlight": "~8.8.0",
+    "iron-autogrow-textarea": "PolymerElements/iron-autogrow-textarea#~1.0.7",
+    "iron-pages": "PolymerElements/iron-pages#~1.0.3",
+    "jem.js": "sedran/jem.js#~1.1.0",
+    "jquery": "^2.0.0",
+    "jquery-ui": "jqueryui#^1.11.0",
+    "paper-button": "PolymerElements/paper-button#~1.0.8",
+    "paper-card": "PolymerElements/paper-card#~1.0.6",
+    "paper-checkbox": "PolymerElements/paper-checkbox#~1.0.13",
+    "paper-dialog": "PolymerElements/paper-dialog#~1.0.2",
+    "paper-dialog-scrollable": "PolymerElements/paper-dialog-scrollable#~1.0.1",
+    "paper-drawer-panel": "PolymerElements/paper-drawer-panel#~1.0.3",
+    "paper-fab": "PolymerElements/paper-fab#~1.0.5",
+    "paper-header-panel": "PolymerElements/paper-header-panel#~1.0.5",
+    "paper-icon-button": "PolymerElements/paper-icon-button#~1.0.5",
+    "paper-item": "PolymerElements/paper-item#~1.0.5",
+    "paper-menu": "PolymerElements/paper-menu#~1.1.1",
+    "paper-progress": "PolymerElements/paper-progress#~1.0.7",
+    "paper-styles": "PolymerElements/paper-styles#~1.0.11",
+    "paper-tabs": "PolymerElements/paper-tabs#~1.0.4",
+    "paper-toolbar": "PolymerElements/paper-toolbar#~1.0.4",
+    "polymer": "Polymer/polymer#^1.0.0",
+    "underscore": "^1.8.0"
+  }
 }
