--- a/bower.json
+++ b/bower.json
@@ -49,6 +49,7 @@
     "paper-fab": "PolymerElements/paper-fab#~1.0.5",
     "paper-header-panel": "PolymerElements/paper-header-panel#~1.0.5",
     "paper-icon-button": "PolymerElements/paper-icon-button#~1.0.5",
+    "paper-input": "PolymerElements/paper-input#~1.0.15",
     "paper-item": "PolymerElements/paper-item#~1.0.5",
     "paper-menu": "PolymerElements/paper-menu#~1.1.1",
     "paper-progress": "PolymerElements/paper-progress#~1.0.7",
