--- a/bower.json
+++ b/bower.json
@@ -32,6 +32,7 @@
     "backbone.validation": "backbone-validation#^0.11.0",
     "blockUI": "malsup/blockui",
     "chosen": "^1.2.0",
+    "fontfaceobserver": "~1.5.4",
     "google-apis": "GoogleWebComponents/google-apis#~1.1.2",
     "google-map": "GoogleWebComponents/google-map#~1.1.4",
     "highlight": "~8.8.0",
